# amplitude-marginaliser

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac
src/: Makefile.am  ampmarginaliser.c  ampmarginaliser.dox  ampmarginaliser.h
test/: Makefile.am  test_ampmarginaliser.c
