lib_LTLIBRARIES=libampmarginaliser.la

headers=../include/ampmarginaliser.h

libampmarginaliser_la_SOURCES = $(headers) ampmarginaliser.c

libampmarginaliser_la_LIBADD = -lm

libampmarginaliser_la_CFLAGS = -O2 -Wall -std=c99

libampmarginaliser_includedir=$(includedir)/ampmarginaliser
libampmarginaliser_include_HEADERS = ampmarginaliser.h
